--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "firebase": "^11.5.0",
+    "firebase": "^11.6.0",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
     "next": "^15.2.4",
@@ -23,6 +23,7 @@
     "quilljs": "^0.18.1",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "tailwind-merge": "^2.6.0"
