--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/firebase": "^3.2.3",
     "apexcharts": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -17,6 +18,7 @@
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
     "next": "^15.2.4",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
     "quill": "^2.0.3",
